# Maxent

./: .gitignore  CODE_DESCRIPTION.md  MIGRATION.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  QUICKSTART.md  README.md
.github/workflows/: cpp-tests.yml
R-package/: DESCRIPTION  LICENSE  NAMESPACE  README.md
R-package/R/: featured_space.R  features.R  grid_io.R  maxent.R  model_diagnostics.R  model_evaluation.R
R-package/src/: Makevars.win  rcpp_featured_space.cpp  rcpp_features.cpp  rcpp_grid_io.cpp  rcpp_maxent.cpp  rcpp_model_diagnostics.cpp  rcpp_model_evaluation.cpp
R-package/tests/: testthat.R
R-package/tests/testthat/: test-featured-space.R  test-features.R  test-grid-io.R  test-maxent.R  test-model-diagnostics.R  test-model-evaluation.R
cpp/: CMakeLists.txt  README.md
cpp/include/maxent/: clamping.hpp  csv_reader.hpp  csv_writer.hpp  feature.hpp  featured_space.hpp  grid.hpp  grid_dimension.hpp  grid_io.hpp  layer.hpp  model_evaluation.hpp  novelty.hpp  projection.hpp  response_curve.hpp  sample.hpp  variable_importance.hpp
cpp/src/: clamping.cpp  csv_reader.cpp  csv_writer.cpp  featured_space.cpp  grid.cpp  grid_dimension.cpp  grid_io.cpp  layer.cpp  model_evaluation.cpp  novelty.cpp  projection.cpp  response_curve.cpp  sample.cpp  variable_importance.cpp
cpp/tests/: CMakeLists.txt  test_clamping.cpp  test_csv_reader.cpp  test_csv_writer.cpp  test_feature.cpp  test_featured_space.cpp  test_grid.cpp  test_grid_io.cpp  test_layer.cpp  test_model_evaluation.cpp  test_novelty.cpp  test_projection.cpp  test_response_curve.cpp  test_sample.cpp  test_variable_importance.cpp
